# test-framework

./: .env.example  .gitignore  Cargo.toml  LICENSE  SECURITY_ASSESSMENT.json  SECURITY_ASSESSMENT_SUMMARY.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
.claude/commands/: bmad-agent-bmm-github-ops.md
.codex/: auth.json  config.toml  history.jsonl  models_cache.json  version.json
.codex/prompts/: bmad-agent-bmm-github-ops.md
.codex/rules/: default.rules
.github/: CODEOWNERS  QUALITY_GATES.md  dependabot.yml
.github/workflows/: git-flow-guard.yml  test.yml
_bmad-output/: automation-summary.md  nfr-assessment.md  test-design-architecture.md  test-design-qa.md  test-review.md  traceability-matrix.md
_bmad-output/brainstorming/: brainstorming-session-2026-01-29T09:10:17Z.md
_bmad-output/excalidraw-diagrams/: overview.excalidraw  prototype.html  theme.json  wireframe-20260130T000000.excalidraw
_bmad-output/excalidraw-diagrams/screens/: Anomaly-Drafts.excalidraw  CR-Review.excalidraw  Configuration-Projet.excalidraw  Dashboard-Run-Start.excalidraw  Mode-D-grad-CSV.excalidraw  Recovery-Replay.excalidraw  Relecture-Validation.excalidraw  Reporting-Hebdo-PPT.excalidraw  Run-Progress.excalidraw  TNR-GO-NO-GO.excalidraw  Triage-Readiness.excalidraw
_bmad-output/implementation-artifacts/: 0-1-configurer-un-projet-via-config-yaml.md  0-2-definir-et-selectionner-des-profils-de-configuration.md  0-3-gestion-des-secrets-via-secret-store.md  0-4-charger-des-templates-cr-ppt-anomalies.md  0-5-journalisation-baseline-sans-donnees-sensibles.md  0-5b-refactoring-test-suite-tf-config.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-01-30.md  implementation-readiness-report-2026-01-31.md  prd-validation-report.md  prd-validation.md  prd.md  sprint-change-proposal-2026-02-08.md  ux-design-directions.html  ux-design-specification.md
_bmad-output/prd/: qa-tester-process-optimization-brief-client.md  qa-tester-process-optimization-prd.md
_bmad-output/test-artifacts/: atdd-checklist-0-3.md
_bmad-output/test-artifacts/atdd/: atdd-checklist-0-2.md  atdd-checklist-0-5.md
_bmad-output/test-artifacts/test-design/: test-design-epic-0-5.md
_bmad-output/test-artifacts/test-reviews/: test-review-story-0-1.md
_bmad-output/test-artifacts/traceability/: traceability-matrix-0-1.md
_bmad/_config/: agent-manifest.csv  files-manifest.csv  manifest.yaml
_bmad/_config/ides/: codex.yaml
_bmad/_memory/: config.yaml
_bmad/_memory/github-ops-sidecar/: instructions.md  memories.md
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/bmm/agents/: github-ops.md
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
crates/tf-config/: Cargo.toml  README.md
crates/tf-config/src/: config.rs  error.rs  lib.rs  profiles.rs  template.rs
crates/tf-config/tests/: integration_tests.rs  profile_tests.rs  profile_unit_tests.rs
crates/tf-config/tests/fixtures/: config_profile_invalid_jira.yaml  config_profile_invalid_llm.yaml  config_profile_invalid_path.yaml  config_profile_invalid_squash.yaml  config_profile_invalid_templates.yaml  config_profile_override_jira.yaml  config_with_profiles.yaml  invalid_jira_url.yaml  invalid_llm_mode.yaml  minimal_config.yaml  missing_project_name.yaml  valid_cloud_config.yaml  valid_config.yaml
crates/tf-config/tests/fixtures/templates/: anomaly-test.md  binary-garbage.md  cr-test.md
crates/tf-logging/: Cargo.toml
crates/tf-logging/src/: config.rs  error.rs  init.rs  lib.rs  redact.rs
crates/tf-logging/tests/: integration_test.rs
crates/tf-logging/tests/common/: mod.rs
crates/tf-security/: Cargo.toml
crates/tf-security/src/: error.rs  keyring.rs  lib.rs
docs/: git-flow.md
scripts/: burn-in-changed.sh  configure-gitflow-protection.sh  git-flow.sh  validate-gitflow-pr.sh
tests/: README.md
tests/e2e/: api.spec.ts  example.spec.ts
tests/support/: global-setup.ts  global-teardown.ts
tests/support/auth/: api-auth-provider.ts
tests/support/factories/: index.ts  user-factory.ts
(+50 files in other folders)
