[package]
name = "tf-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Configuration management for test-framework"
readme = "README.md"

[features]
test-utils = []

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_matches.workspace = true
serde_json.workspace = true
tempfile.workspace = true
