[package]
name = "tf-logging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tf-config = { path = "../tf-config" }
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_matches.workspace = true
